# skill-sidecar

./: Cargo.toml  Dockerfile  README.md  index.yaml
.github/workflows/: docker.yml  helm-release.yml
charts/skill-sidecar/: Chart.yaml  values.yaml
charts/skill-sidecar/templates/: _helpers.tpl  deployment.yaml  service.yaml
charts/skill-sidecar/templates/tests/: test-sidecar.yaml
examples/with-gh/: Dockerfile
examples/with-yt-dlp/: Dockerfile
src/: main.rs
